--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/c3p0-0.9.5.5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/c3p0-oracle-thin-extras-0.9.5.5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mchange-commons-java-0.2.19.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/smartupload.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
