--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,4 +5,15 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   
+  <listener>
+  	<listener-class>edu.hbuas.listener.ApplicationListener</listener-class>
+  </listener>
+<filter>
+  	<filter-name>EncodeFilter</filter-name>
+  	<filter-class>edu.hbuas.filter.EncodeFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>EncodeFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
